example/lib/src/generated/errors/errors_localization_ja.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Japanese (`ja`).
class ErrorsLocalizationJa extends ErrorsLocalization {
  ErrorsLocalizationJa([String locale = 'ja']) : super(locale);

  @override
  String get error => 'エラーが発生しました';

  @override
  String get unexpectedError => '予期しないエラーが発生しました';

  @override
  String get bugReportSentText => 'バグレポートが正常に送信されました。';
}
